Last push for the night, fixed oversight where white space would be shown is window was resized, also fixed height being too large.

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -42,6 +42,9 @@ body {
   float: right;
   left: 20px; top:92px; right:0; bottom:0;
   height: 100%;
+  height: -webkit-calc(100% - 92px);
+  height: -moz-calc(100% - 92px);
+  height: calc(100% - 92px);
   width: 100%;
   width: -webkit-calc(100% - 20px);
   width: -moz-calc(100% - 20px);
